# Resumio

./: .gitignore  README.md  manage.py
Resumio/: asgi.py  settings.py  urls.py  wsgi.py
assembler/: apps.py  views.py
assembler/static/assembler/css/: style.css
assembler/static/assembler/js/: assembler.js
assembler/templates/assembler/: main.html  resSec.json  resumeSections.py
assembler/templates/home/: home.html
backend/: main.py  pyproject.toml  requirements
backend/apps/dev_tools/: routes.py
backend/apps/resumio/: models.py  routes.py
backend/apps/users/: models.py  routes.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  adapters.js  ex.json  index.js  themes.jsx
frontend/src/components/control/: About.jsx  Editor.jsx  Header.jsx  Homepage.jsx  LoadingPanel.jsx  Main.jsx  NavBar.jsx  ResumioApp.jsx  UserBox.jsx
frontend/src/components/control/Auth/: AuthForm.jsx  AuthModal.jsx  LoginForm.jsx  RegistrationForm.jsx  UserBox.jsx  authForm-actions.js  authForm-reducer.js
frontend/src/components/control/InputApp/: InputApp.jsx
frontend/src/components/control/OutputApp/: OutputApp.jsx
frontend/src/components/control/ResumioApp/: AppNav.jsx  EmptyApp.jsx  ResumioApp.jsx
frontend/src/components/style/: FooterStyles.jsx  HeaderStyles.jsx  MainStyles.jsx  ModalStyles.jsx  NavBarStyles.jsx  NavStyles.jsx  UserBoxStyles.jsx
frontend/src/context/: AuthStateProvider.jsx  auth-reducer.js
frontend/src/hooks/: useAxios.js
static/css/: style.css
(+53 files in other folders)
